加入css，加入關於

--- a/index.html
+++ b/index.html
@@ -4,12 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>我的海生館</title>
+    <link rel="stylesheet" href="css/simple.css">
 </head>
 <body>
+    
+    <header>
+        <nav>
+                <a href="index.html" aria-current="page">首頁</a>
+                <a href="about.html">關於我們</a>
+        </nav>
     <h1>海生館</h1>
-    <img src="海生館.jpg" alt="海生館">
+    </header>
+    <main></main>
+    <img src="images/海生館.jpg"alt="海生館">
     <p>海洋的故事即將開始，歡迎您的到來！</p>
     <p>想了解哪種魚呢?</p>
+    <h2>我最喜歡的魚</h2>
+    <u1>
+        <li>海豚</li>
+        <li>鯨鯊</li>
+        <li>白鯨</li>
+    </u1>
     
+    </main>
+    <footer>歡迎來參觀海生館吧!</footer>
 </body>
 </html>
