--- a/about.html
+++ b/about.html
@@ -11,11 +11,12 @@
         <nav>
             <a href="index.html">首頁</a>
             <a href="about.html" aria-current="page">關於我們</a>
+            <a href="blog/index.html">部落格</a>
     </nav>
-    <h1>海生館</h1>
+    <h1>關於我</h1>
     </header>
     <main></main>
-    <img src="images/海生館.jpg"alt="海生館">
+    <img src="images/海生館3"alt="海生館">
     <p>海洋的故事即將開始，歡迎您的到來！</p>
     <p>想了解哪種魚呢?</p>
     <h2>我最喜歡的魚</h2>
