--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <nav>
                 <a href="index.html" aria-current="page">首頁</a>
                 <a href="about.html">關於我們</a>
+                <a href="blog/index.html">部落格</a>
         </nav>
     <h1>海生館</h1>
     </header>
