--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <img src="images/海生館.jpg"alt="海生館">
     <p>海洋的故事即將開始，歡迎您的到來！</p>
     <p>想了解哪種魚呢?</p>
-    <h2>我最喜歡的魚</h2>
+    <h2>我喜歡的魚</h2>
     <u1>
         <li>海豚</li>
         <li>鯨鯊</li>
