--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <main></main>
     <img src="images/海生館.jpg"alt="海生館">
     <p>海洋的故事即將開始，歡迎您的到來！</p>
-    <p>想了解哪種魚呢?</p>
-    <h2>我喜歡的魚</h2>
+    <p>想了解有哪些區域嗎?</p>
+    <h2>區域</h2>
     <u1>
-        <li>海豚</li>
-        <li>鯨鯊</li>
-        <li>白鯨</li>
+        <li>潮間帶</li>
+        <li>白鯨區</li>
+        <li>海底隧道</li>
     </u1>
     
     </main>
